Fix some layout issues about icons

--- a/less/style.less
+++ b/less/style.less
@@ -14,6 +14,10 @@ main{
   .actions{
     text-align: center;
     display: inline;
+    i{
+      padding-right: 1rem;
+      vertical-align: middle;
+    }
   }
   #recap{
     margin-top: 3rem;
